OG:Image fix and Animations

--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
     <!-- Facebook Meta -->
     <meta property="og:title" content="User Experience Society">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://imgur.com/MovXZlH">
+    <meta property="og:image" content="https://i.imgur.com/DKAmvO4.jpg">
     <meta property="og:description" content="UX Society is a student organization that advocates and practices human-centered design in solving problems in the community.">
 
     <meta name="twitter:site" content="@uxsociety-website">
     <meta name="twitter:creator" content="@uxsocietyph">
     <meta name="twitter:title" content="User Experience Society">
     <meta name="twitter:description" content="UX Society is a student organization that advocates and practices human-centered design in solving problems in the community.">
-    <meta name="twitter:image" content="https://imgur.com/MovXZlH">
+    <meta name="twitter:image" content="https://i.imgur.com/DKAmvO4.jpg">
 
 
     <!--
