--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <meta name="description" content="UX Society is a student organization that advocates and practices human-centered design in solving problems in the community.">
 
     <!-- Facebook Meta -->
-    <meta property="og:title" content="User Experience Society">
+    <meta property="og:url" content="http://www.uxsociety.org/"/>
+    <meta property="og:title" content="User Experience Society"/>
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://i.imgur.com/DKAmvO4.jpg">
     <meta property="og:description" content="UX Society is a student organization that advocates and practices human-centered design in solving problems in the community.">
