--- a/public/index.html
+++ b/public/index.html
@@ -68,5 +68,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <div hidden>
+      <form name="contact" netlify netlify-honeypot="bot-field">
+        <input type="text" name="name" />
+        <input type="email" name="email" />
+        <textarea name="message"></textarea>
+      </form>
+    </div>
+
+
   </body>
 </html>
